Cache API should return Abort error in case of putting an aborted fetch https://bugs.webkit.org/show_bug.cgi?id=196757

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

* web-platform-tests/service-workers/cache-storage/serviceworker/cache-abort.https-expected.txt:
* web-platform-tests/service-workers/cache-storage/window/cache-abort.https-expected.txt:
* web-platform-tests/service-workers/cache-storage/worker/cache-abort.https-expected.txt:

Source/WebCore:

In case of an aborted fetch, call consume callback with an AbortError.
Update the code that handles load cancelling as the loader callback is called.
Covered by rebased tests.

* Modules/fetch/FetchResponse.cpp:
(WebCore::FetchResponse::addAbortSteps):
(WebCore::FetchResponse::BodyLoader::didFail):
(WebCore::FetchResponse::BodyLoader::BodyLoader):
(WebCore::FetchResponse::BodyLoader::~BodyLoader):
(WebCore::FetchResponse::stop):
* Modules/fetch/FetchResponse.h:


Canonical link: https://commits.webkit.org/211390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244515 268f45cc-cd09-0410-ab3c-d52691b4dbfc