Source/WebCore/Modules/fetch/FetchResponse.h
@@ -129,6 +129,7 @@ private:
     class BodyLoader final : public FetchLoaderClient {
     public:
         BodyLoader(FetchResponse&, NotificationCallback&&);
+        BodyLoader(BodyLoader&&) = default;
         ~BodyLoader();
 
         bool start(ScriptExecutionContext&, const FetchRequest&);
@@ -140,6 +141,7 @@ private:
         RefPtr<SharedBuffer> startStreaming();
 #endif
         NotificationCallback takeNotificationCallback() { return WTFMove(m_responseCallback); }
+        ConsumeDataByChunkCallback takeConsumeDataCallback() { return WTFMove(m_consumeDataCallback); }
 
     private:
         // FetchLoaderClient API
@@ -152,6 +154,7 @@ private:
         NotificationCallback m_responseCallback;
         ConsumeDataByChunkCallback m_consumeDataCallback;
         std::unique_ptr<FetchLoader> m_loader;
+        Ref<PendingActivity<FetchResponse>> m_pendingActivity;
     };
 
     mutable Optional<ResourceResponse> m_filteredResponse;
